--- a/css/bootstyles.css
+++ b/css/bootstyles.css
@@ -32,7 +32,7 @@ body{
     text-shadow: 0 0 15px #faf1e6;
   }
 .container-fluid{
-    padding: 2% 8%;
+    padding: 2% 10%;
 }
 .navbar_d{
 padding: 0% 1%;
@@ -228,3 +228,31 @@ padding: 0% 1%;
     font-size: 2rem;
     color: #FFF;
 }
+
+
+/* ############_STUDY_SECTION_############ */
+#study-section
+{
+    padding-top: 10%;
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-bottom: 10%;
+}
+#study-section .card
+{
+    margin: 10px;
+}
+.card-body
+{
+    color: grey;
+}
+.study_icon{
+    color: #005a8d;
+    
+}
+.card:hover
+{
+    transform: scale(1.1);
+    transition: .5s;
+}
+/* ############_STUDY_SECTION_############ */
